06-IngressController/ingress-fanout.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fanout-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: fanout.local
      http:
        paths:
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: app01
                port:
                  number: 80
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: app01
                port:
                  number: 80
